# studentbot

./: .gitignore  README.md  pyproject.toml
data/: database.db
src/: __main__.py  config.py
src/data_base/: __init__.py  adds.py  create_db.py  middleprocess.py  selects.py
src/handlers/: menu.py
src/keyboards/: __init__.py  menu_kb.py
