[tool.poetry]
name = "studentbot"
version = "0.1.0"
description = ""
authors = ["maximyuk <maksimukmaks1707@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.12.0"
aiosqlite = "^0.20.0"
asyncache = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
